[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
description = "tutorial from https://suibianxiedianer.github.io/rust-cli-book-zh_CN/tutorial/setup_zh.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
