[package]
name = "kube-pod-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.90.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
serde_json = "1.0.115"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }
